compiler/tests/ar/errors/ternary_mismatch.salam
// لغة: العربية
// توقع: E021
دالة الرئیسیة:
    ص := صواب ؟ 2 : "س"
    اطبع ص
نهاية
